k8s/GraphQueryService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphqueryservice
  labels:
    app: graphqueryservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphqueryservice
  template:
    metadata:
      labels:
        app: graphqueryservice
    spec:
      containers:
        - name: graphqueryservice
          image: graphqueryservice:latest
          ports:
            - containerPort: 8080
